--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
 2018-06-14  Iulian Rotaru  <iulian@gnotis.ro>
 
+	* src\main\java\js\template\xhtml\package-info.java: fix misspeling
 	* README.md: New file.
